--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <aside>
       <img src="./assets/logo.svg" alt="Logo NLW Spacetime" />
-      <img src="./assets/rodrigo.jpeg" alt="Foto do Rodrigo" />
+      <img src="./assets/foto.jpeg" alt="Foto" />
 
       <p>
         Cápsula do tempo de <br />
